--- a/personaforge/templates/index.html
+++ b/personaforge/templates/index.html
@@ -11,14 +11,14 @@
   <meta property="og:url" content="https://darkai.ca/personaforge/" />
   <meta property="og:title" content="PersonaForge – Synthetic Identity Vendor Intelligence" />
   <meta property="og:description" content="PersonaForge identifies vendors, marketplaces, and bot-driven distribution networks selling synthetic identities and deepfake impersonation kits." />
-  <meta property="og:image" content="https://darkai.ca/static/og-image.png" />
+  <meta property="og:image" content="https://i.imgur.com/lIq8UU2.jpeg" />
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:url" content="https://darkai.ca/personaforge/" />
   <meta name="twitter:title" content="PersonaForge – Synthetic Identity Vendor Intelligence" />
   <meta name="twitter:description" content="PersonaForge identifies vendors, marketplaces, and bot-driven distribution networks selling synthetic identities and deepfake impersonation kits." />
-  <meta name="twitter:image" content="https://darkai.ca/static/og-image.png" />
+  <meta name="twitter:image" content="https://i.imgur.com/lIq8UU2.jpeg" />
   
   <link rel="icon" type="image/svg+xml" href="{{ url_for('personaforge.static', filename='favicon.svg') }}" />
   <link rel="alternate icon" href="{{ url_for('personaforge.static', filename='favicon.svg') }}" />
