--- a/templates/about.html
+++ b/templates/about.html
@@ -11,14 +11,14 @@
   <meta property="og:url" content="https://darkai.ca/about" />
   <meta property="og:title" content="About – Dark AI" />
   <meta property="og:description" content="Learn about Dark AI's mission to expose AI-powered harms through investigative tools." />
-  <meta property="og:image" content="https://darkai.ca/static/og-image.png" />
+  <meta property="og:image" content="https://i.imgur.com/YTCnPOE.png" />
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:url" content="https://darkai.ca/about" />
   <meta name="twitter:title" content="About – Dark AI" />
   <meta name="twitter:description" content="Learn about Dark AI's mission to expose AI-powered harms through investigative tools." />
-  <meta name="twitter:image" content="https://darkai.ca/static/og-image.png" />
+  <meta name="twitter:image" content="https://i.imgur.com/YTCnPOE.png" />
   
   <link rel="icon" type="image/svg+xml" href="/static/favicon.svg" />
   <link rel="alternate icon" href="/static/favicon.svg" />
