Rename ShadowStack navigation template to avoid conflicts with BlackWire
- Renamed _navigation.html to _shadowstack_navigation.html in ShadowStack
- Updated all ShadowStack templates to use the new template name
- This prevents Flask from accidentally loading BlackWire's _navigation.html
- Fixes issue where ShadowStack was showing BlackWire navigation on live deploy

--- a/shadowstack/templates/splash.html
+++ b/shadowstack/templates/splash.html
@@ -159,7 +159,7 @@
 </head>
 <body class="page">
   <main>
-    {% from "_navigation.html" import render_nav %}
+    {% from "_shadowstack_navigation.html" import render_nav %}
     {{ render_nav('home') }}
     
     <header class="hero" aria-labelledby="hero-title">
