--- a/shadowstack/templates/action.html
+++ b/shadowstack/templates/action.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Concrete steps for stopping AI-generated sexual abuse: how to report sites, support survivors, and pressure infrastructure providers using ShadowStack." />
   <link rel="icon" type="image/svg+xml" href="{{ url_for('shadowstack.static', filename='images/favicon.svg') }}" />
   <link rel="alternate icon" href="{{ url_for('shadowstack.static', filename='images/favicon.svg') }}" />
-  {% from "_navigation.html" import render_nav %}
+  {% from "_shadowstack_navigation.html" import render_nav %}
 
   <style>
     :root {
@@ -147,7 +147,7 @@
   </style>
 </head>
 <body class="page">
-  {% from "_navigation.html" import render_nav %}
+  {% from "_shadowstack_navigation.html" import render_nav %}
   {{ render_nav('action') }}
   <main>
     <!-- HERO / INTRO -->
