--- a/shadowstack/templates/check.html
+++ b/shadowstack/templates/check.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Analyze a URL to map its infrastructure: hosting, CDN, registrar, payment processors, and more." />
   <link rel="icon" type="image/svg+xml" href="{{ url_for('shadowstack.static', filename='images/favicon.svg') }}" />
   <link rel="alternate icon" href="{{ url_for('shadowstack.static', filename='images/favicon.svg') }}" />
-  {% from "_navigation.html" import render_nav %}
+  {% from "_shadowstack_navigation.html" import render_nav %}
 
   <style>
     :root {
@@ -291,7 +291,7 @@
   </style>
 </head>
 <body class="page">
-  {% from "_navigation.html" import render_nav %}
+  {% from "_shadowstack_navigation.html" import render_nav %}
   {{ render_nav('check') }}
   <main>
     <header class="hero">
