--- a/shadowstack/templates/shadowstack_dashboard.html
+++ b/shadowstack/templates/shadowstack_dashboard.html
@@ -26,7 +26,7 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
-    {% from "_navigation.html" import render_nav %}
+    {% from "_shadowstack_navigation.html" import render_nav %}
     {{ render_nav('data') }}
     <div class="container">
         <header>
